# CodeStub

./: build.sh
code/inc/: ElfElementHolder.h  IOHandler.h  MessageQueue.h  TerminalHandler.h
code/src/: IOHandler.cpp  TerminalHandler.cpp
inc/: ElfBuffHandler.h  ElfHandler.h  ElfParser.h  ElfVectorHandler.h  ElfVectorHolder.h  FunctionInvoker.h  IOHandler.h  ProcManual.h
sample/: ProccessManual.cpp  build.sh
sample_mq/: MessageQueue.cpp  MessageQueueClient.cpp  build.sh
src/: CodeStub.cpp  ElfHandler.cpp  ElfHandler.h  ElfParser.cpp  ElfStuber.cpp  FunctionInvoker.cpp  IOHandler.cpp  ProcManual.cpp  ProcStubber.cpp  Test_ExternSym.cpp  Test_ProcManual.cpp  extrern_test.cpp  test.cpp  test02.cpp
test/: CMakeLists.txt  Test_FunctionInvoker.cpp  Test_ProcManual.cpp  build.sh
test/test_cast/: FunctionInvokerTest.cpp  ManualCommandTest.cpp  ProcManualTest.cpp
